Changed file's type

--- a/newHTML.html
+++ b/newHTML.html
@@ -13,7 +13,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
   </head>
 
@@ -30,42 +30,42 @@
         <div class="team-area col-12 d-flex justify-content-center">
           <div class="card employee-card">
             <div class="card-header">
-              <h2 class="card-title">a</h2>
+              <h2 class="card-title">Sara</h2>
               <h3 class="card-title">
                 <i class="fas fa-mug-hot mr-2"></i>Manager
               </h3>
             </div>
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item">ID: a</li>
+                <li class="list-group-item">ID: 012</li>
                 <li class="list-group-item">
-                  Email: <a href="mailto:aa">aa</a>
+                  Email: <a href="mailto:sara@cmp.com">sara@cmp.com</a>
                 </li>
-                <li class="list-group-item">Office number: 12</li>
+                <li class="list-group-item">Office number: 0211213145</li>
               </ul>
             </div>
           </div>
 
           <div class="card employee-card">
             <div class="card-header">
-              <h2 class="card-title">sads</h2>
+              <h2 class="card-title">Ray</h2>
               <h3 class="card-title">
                 <i class="fas fa-glasses mr-2"></i>Engineer
               </h3>
             </div>
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item">ID: fs</li>
+                <li class="list-group-item">ID: 0092</li>
                 <li class="list-group-item">
-                  Email: <a href="mailto:fs">fs</a>
+                  Email: <a href="mailto:ray@cmp.com">ray@cmp.com</a>
                 </li>
                 <li class="list-group-item">
                   GitHub:
                   <a
-                    href="https://github.com/12"
+                    href="https://github.com/ray-ray.github.com"
                     target="_blank"
                     rel="noopener noreferrer"
-                    >12</a
+                    >ray-ray.github.com</a
                   >
                 </li>
               </ul>
@@ -74,16 +74,19 @@
 
           <div class="card employee-card">
             <div class="card-header">
-              <h2 class="card-title">w</h2>
+              <h2 class="card-title">Gina</h2>
               <h3 class="card-title">
                 <i class="fas fa-user-graduate mr-2"></i>Intern
               </h3>
             </div>
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item">ID: e</li>
-                <li class="list-group-item">Email: <a href="mailto:r">r</a></li>
-                <li class="list-group-item">School: rere</li>
+                <li class="list-group-item">ID: 00022</li>
+                <li class="list-group-item">
+                  Email:
+                  <a href="mailto:intern-gina@cmp.com">intern-gina@cmp.com</a>
+                </li>
+                <li class="list-group-item">School: School of London</li>
               </ul>
             </div>
           </div>
